{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 473,
  "lineage": "800402b2-7939-1387-38ae-086255ef8272",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "EC2-One",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03ededff12e34e59e",
            "arn": "arn:aws:ec2:us-east-1:728738226157:instance/i-04f1e614991b5aa19",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04f1e614991b5aa19",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Pathak-SahaB",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c1f2532abef8b384",
            "private_dns": "ip-10-0-1-156.ec2.internal",
            "private_ip": "10.0.1.156",
            "public_dns": "ec2-3-88-23-186.compute-1.amazonaws.com",
            "public_ip": "3.88.23.186",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08348a4f3410ac717",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0dae3af420eb3044d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04237c49e908abf52",
            "tags": {
              "Name": "Aman-EC2-1"
            },
            "tags_all": {
              "Name": "Aman-EC2-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dae3af420eb3044d"
            ]
          },
          "dependencies": [
            "aws_security_group.security_group",
            "aws_subnet.subnet1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "EC2-Two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03ededff12e34e59e",
            "arn": "arn:aws:ec2:us-east-1:728738226157:instance/i-00600d93e62f8eb00",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00600d93e62f8eb00",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Pathak-SahaB",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-013c4b9a28afcc8d4",
            "private_dns": "ip-10-0-2-249.ec2.internal",
            "private_ip": "10.0.2.249",
            "public_dns": "ec2-54-205-8-122.compute-1.amazonaws.com",
            "public_ip": "54.205.8.122",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0712d98369800f664",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0dae3af420eb3044d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-046fbaebade531a6b",
            "tags": {
              "Name": "Aman-EC2-2"
            },
            "tags_all": {
              "Name": "Aman-EC2-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dae3af420eb3044d"
            ]
          },
          "dependencies": [
            "aws_security_group.security_group",
            "aws_subnet.subnet2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Aman-IG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:728738226157:internet-gateway/igw-0332a37c86dc6894d",
            "id": "igw-0332a37c86dc6894d",
            "owner_id": "728738226157",
            "tags": {
              "Name": "Aman-IG"
            },
            "tags_all": {
              "Name": "Aman-IG"
            },
            "vpc_id": "vpc-0482a0b1a18cc68b7"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "Load-Balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:728738226157:loadbalancer/app/Load-Balancer/7e413bd7f586adac",
            "arn_suffix": "app/Load-Balancer/7e413bd7f586adac",
            "desync_mitigation_mode": "defensive",
            "dns_name": "Load-Balancer-911096961.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:728738226157:loadbalancer/app/Load-Balancer/7e413bd7f586adac",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Load-Balancer",
            "security_groups": [
              "sg-0dae3af420eb3044d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04237c49e908abf52"
              },
              {
                "subnet_id": "subnet-046fbaebade531a6b"
              }
            ],
            "subnets": [
              "subnet-04237c49e908abf52",
              "subnet-046fbaebade531a6b"
            ],
            "vpc_id": "vpc-0482a0b1a18cc68b7",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.security_group",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "Aman-LB-Listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:728738226157:listener/app/Load-Balancer/7e413bd7f586adac/6226aa5b6d8b8e3e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:728738226157:targetgroup/TG/f967360326f27f61",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:728738226157:listener/app/Load-Balancer/7e413bd7f586adac/6226aa5b6d8b8e3e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:728738226157:loadbalancer/app/Load-Balancer/7e413bd7f586adac",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.Load-Balancer",
            "aws_lb_target_group.TG",
            "aws_security_group.security_group",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:728738226157:targetgroup/TG/f967360326f27f61",
            "arn_suffix": "targetgroup/TG/f967360326f27f61",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:728738226157:targetgroup/TG/f967360326f27f61",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "Aman-TG"
            },
            "tags_all": {
              "Name": "Aman-TG"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0482a0b1a18cc68b7"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "TG-Attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:728738226157:targetgroup/TG/f967360326f27f61-20220422122006623200000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:728738226157:targetgroup/TG/f967360326f27f61",
            "target_id": "i-04f1e614991b5aa19"
          },
          "dependencies": [
            "aws_instance.EC2-One",
            "aws_lb_target_group.TG",
            "aws_security_group.security_group",
            "aws_subnet.subnet1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "TG-Attachment2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:728738226157:targetgroup/TG/f967360326f27f61-20220422122018908900000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:728738226157:targetgroup/TG/f967360326f27f61",
            "target_id": "i-00600d93e62f8eb00"
          },
          "dependencies": [
            "aws_instance.EC2-Two",
            "aws_lb_target_group.TG",
            "aws_security_group.security_group",
            "aws_subnet.subnet2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Aman-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:728738226157:route-table/rtb-0d0266a43f67416f6",
            "id": "rtb-0d0266a43f67416f6",
            "owner_id": "728738226157",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0332a37c86dc6894d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Aman-RT"
            },
            "tags_all": {
              "Name": "Aman-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0482a0b1a18cc68b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Aman-IG",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT-Association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc20e2d702bc972a",
            "route_table_id": "rtb-0d0266a43f67416f6",
            "subnet_id": "subnet-04237c49e908abf52"
          },
          "dependencies": [
            "aws_internet_gateway.Aman-IG",
            "aws_route_table.Aman-RT",
            "aws_subnet.subnet1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT-Association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0503d6971f58dc7c4",
            "route_table_id": "rtb-0d0266a43f67416f6",
            "subnet_id": "subnet-046fbaebade531a6b"
          },
          "dependencies": [
            "aws_internet_gateway.Aman-IG",
            "aws_route_table.Aman-RT",
            "aws_subnet.subnet2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:728738226157:security-group/sg-0dae3af420eb3044d",
            "description": "Protocol Type HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dae3af420eb3044d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "HTTP",
            "name_prefix": "",
            "owner_id": "728738226157",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Aman-SG"
            },
            "tags_all": {
              "Name": "Aman-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0482a0b1a18cc68b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:728738226157:subnet/subnet-04237c49e908abf52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04237c49e908abf52",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "728738226157",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Aman-Subnet1"
            },
            "tags_all": {
              "Name": "Aman-Subnet1"
            },
            "vpc_id": "vpc-0482a0b1a18cc68b7"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:728738226157:subnet/subnet-046fbaebade531a6b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046fbaebade531a6b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "728738226157",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Aman-Subnet2"
            },
            "tags_all": {
              "Name": "Aman-Subnet2"
            },
            "vpc_id": "vpc-0482a0b1a18cc68b7"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:728738226157:vpc/vpc-0482a0b1a18cc68b7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06e453914050d6a58",
            "default_route_table_id": "rtb-0a5d2d5eca2ee9609",
            "default_security_group_id": "sg-062ff690ebc747380",
            "dhcp_options_id": "dopt-080de88f6a273ee8a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0482a0b1a18cc68b7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a5d2d5eca2ee9609",
            "owner_id": "728738226157",
            "tags": {
              "Name": "Aman-VPC"
            },
            "tags_all": {
              "Name": "Aman-VPC"
            }
          }
        }
      ]
    }
  ]
}